--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,11 +9,10 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v4
 
-        - name: Welcome Message
-          run: echo "MyFirst Github Actions Job"
-
-        - name: List Files
-          run: ls
-          
-        - name: Read File
-          run: cat README.md
+        - name: List and Read Files
+          run: | 
+            echo "MyFirst Github Actions Job"
+            ls -ltra
+            cat README.md
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon " Run for cover, I am a DRAGON....RAWR" >> dragon.txt
