--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -9,6 +9,9 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
+
+        - name: List Repo File
+          run: ls -ltra
         
         - name: Executing Shell Script
           run: |
