--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,7 +11,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: List Repo File
-          run: ls -ltra
+          run: ls -ltra .github
         
         - name: Executing Shell Script
           run: |
